feat: view_balance

--- a/Simple Bank Manager/Convert currencies/task-info.yaml
+++ b/Simple Bank Manager/Convert currencies/task-info.yaml
@@ -2047,6 +2047,6 @@ files:
           }
       }
     learner_created: false
-feedback_link: https://hyperskill.org/projects/333/stages/1871/implement#comment
+feedback_link: https://hyperskill.org/learn/step/27108#comment
 status: Unchecked
 record: -1
