--- a/Simple Bank Manager/Pay bills/task-info.yaml
+++ b/Simple Bank Manager/Pay bills/task-info.yaml
@@ -2502,6 +2502,6 @@ files:
           }
       }
     learner_created: false
-feedback_link: https://hyperskill.org/projects/333/stages/1872/implement#comment
+feedback_link: https://hyperskill.org/learn/step/27109#comment
 status: Unchecked
 record: -1
