--- a/Simple Bank Manager/View balance and make transfers/task-info.yaml
+++ b/Simple Bank Manager/View balance and make transfers/task-info.yaml
@@ -1913,5 +1913,8 @@ files:
     visible: true
     learner_created: true
 feedback_link: https://hyperskill.org/learn/step/27107#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Thu, 25 Apr 2024 06:25:58 UTC"
 record: -1
