--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -4,7 +4,7 @@ hyperskill_project:
   is_template_based: false
   use_ide: true
   environment: android
-update_date: "Wed, 24 Apr 2024 14:45:54 UTC"
+update_date: "Thu, 25 Apr 2024 05:04:37 UTC"
 stages:
   - id: 1868
     step: 27105
@@ -14,7 +14,7 @@ stages:
     is_completed: true
   - id: 1870
     step: 27107
-    is_completed: false
+    is_completed: true
   - id: 1871
     step: 27108
     is_completed: false
