--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -4,7 +4,7 @@ hyperskill_project:
   is_template_based: false
   use_ide: true
   environment: android
-update_date: "Thu, 25 Apr 2024 10:04:39 UTC"
+update_date: "Fri, 26 Apr 2024 11:57:23 UTC"
 stages:
   - id: 1868
     step: 27105
@@ -20,7 +20,7 @@ stages:
     is_completed: true
   - id: 1872
     step: 27109
-    is_completed: false
+    is_completed: true
 topics:
   0:
     - title: Data structures
